# opengl_sample

./: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: gl.h
res/shaders/: fragment_shader.glsl
src/: CMakeLists.txt  assets.hpp.in  main.cpp  mylib.cpp  mylib.hpp
src/shader/: CMakeLists.txt  shader.cpp  shader.hpp
stb_image/: CMakeLists.txt
